JS toegevoegd van Hammenu in HTML en JS #13

--- a/index.html
+++ b/index.html
@@ -175,5 +175,8 @@
 
     </footer>
     
+    <!-- Link naar JavaScript  -->
+    <script defer src="scripts/script.js"></script>
+
 </body>
 </html>
