Link naar contact pagina gefixt HTML #11

--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
             <h2>Platform Ad</h2>
             <ul>
                 <li><a href="">Over Ons</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </section>
 
