--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <h2>Platform Ad</h2>
             <ul>
                 <li><a href="">Over Ons</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </section>
 
