Font-size classes van de gezamelijke styleguide gegeven aan HTML elementen en verwijderd uit de CSS close #17

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
         
         <section class="contact-form">
             
-            <h2>Contact formulier</h2>
+            <h2 class="font-size-heading-s">Contact formulier</h2>
 
             <form class="contact-form-inside">
                 <label class="label-ad">
