--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
         <!-- Welkom sectie op home-pagina -->
         <section class="welcome-home-page">
-            <h1>Welkom bij Platform Ad</h1>
-            <p>Platform Ad is hét informatiepunt voor Associate degrees sinds 2018.</p>
-            <h2>Wat is een Associate degree?</h2>
+            <h1 class="font-size-heading-l">Welkom bij Platform Ad</h1>
+            <p class="font-size-m">Platform Ad is hét informatiepunt voor Associate degrees sinds 2018.</p>
+            <h2 class="font-size-heading-s">Wat is een Associate degree?</h2>
             <ul>
                 <li>
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 640 640">
@@ -125,26 +125,26 @@
 
                  <!-- Voor de doelgroepen op de website -->
         <section class="target-groups">
-            <h2>Voor wie</h2>
-            <p>
+            <h2 class="font-size-heading-s">Voor wie</h2>
+            <p class="font-size-s">
                 <svg width="50" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M35.2246 0L46.9662 11.7415L43.0523 15.6554L38.0851 10.6882L38.0851 29.6429L32.5501 29.6429V10.5022L27.3969 15.6554L23.4831 11.7415L35.2246 0Z" fill="black"/><path d="M0 35.2246L11.7415 46.9662L15.6554 43.0523L10.5212 37.9182H29.8094L29.8094 32.3832L10.6692 32.3832L15.6554 27.3969L11.7415 23.4831L0 35.2246Z" fill="black"/><path d="M23.4831 58.7077L35.2246 70.4493L46.9662 58.7077L43.0523 54.7939L38.1123 59.7339V40.686H32.5773V59.9743L27.3969 54.7939L23.4831 58.7077Z" fill="black"/><path d="M70.4493 35.2246L58.7077 23.4831L54.7939 27.3969L59.8073 32.4104L40.8525 32.4104L40.8526 37.9454L59.9008 37.9454L54.7939 43.0523L58.7077 46.9662L70.4493 35.2246Z" fill="black"/>
                 </svg>
                 <strong>Oriënteren</strong> op een Ad-opleiding
             </p>
-            <p>
+            <p class="font-size-s">
                 <svg width="50" viewBox="0 0 73 73" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M68.8916 29.8779C69.8037 29.8265 70.4186 30.4549 70.4922 31.1143L70.5 31.2461V63.0137C70.5 63.6626 69.954 64.3298 69.0928 64.375H69.0918C63.0206 64.6935 50.4493 65.8454 41.2822 70.2031V36.3389C45.1084 34.071 50.1853 32.5415 55.292 31.5361C60.4851 30.5137 65.5117 30.0695 68.8916 29.8779ZM4.10645 29.877V29.8779C7.48745 30.0702 12.5139 30.5149 17.707 31.5371C22.8146 32.5425 27.8926 34.0713 31.7197 36.3398V70.1992C22.5513 65.8405 9.97865 64.6895 3.9082 64.3711H3.90625C3.04651 64.3267 2.5 63.66 2.5 63.0107V31.2441C2.50021 30.5414 3.13375 29.8224 4.10645 29.877ZM36.499 2.5C42.6776 2.5 47.6865 7.5087 47.6865 13.6875C47.6865 19.8663 42.6776 24.875 36.499 24.875C30.3206 24.8749 25.3125 19.8662 25.3125 13.6875C25.3125 7.50879 30.3206 2.50014 36.499 2.5Z" stroke="black" stroke-width="5"/>
                 </svg>
                 <strong>Studeren</strong> in een Ad-opleiding
             </p>
-            <p>
+            <p class="font-size-s">
                 <svg width="50" viewBox="0 0 67 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M51.9167 11.125C51.9167 4.98085 46.936 0 40.7917 0H25.9583C19.8142 0 14.8333 4.98085 14.8333 11.125H11.125C4.98085 11.125 0 16.1058 0 22.25V51.9167C0 58.061 4.98085 63.0417 11.125 63.0417H55.625C61.7693 63.0417 66.75 58.061 66.75 51.9167V22.25C66.75 16.1058 61.7693 11.125 55.625 11.125H51.9167ZM40.7917 7.41667H25.9583C23.9103 7.41667 22.25 9.07696 22.25 11.125H44.5C44.5 9.07696 42.8398 7.41667 40.7917 7.41667ZM11.125 18.5417H55.625C57.6731 18.5417 59.3333 20.202 59.3333 22.25V51.9167C59.3333 53.9648 57.6731 55.625 55.625 55.625H11.125C9.07696 55.625 7.41667 53.9648 7.41667 51.9167V22.25C7.41667 20.202 9.07696 18.5417 11.125 18.5417Z" fill="black"/>
                 </svg>
                 <strong>Werken</strong> met Ad-talent
             </p>
-            <p>
+            <p class="font-size-s">
                 <svg height="50" viewBox="0 0 51 73" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19.3779 61.8115H31.6221C33.2079 61.8117 34.5023 63.0579 34.5801 64.624L34.584 64.7764C34.5835 65.1729 34.464 65.5638 34.2363 65.9004V65.9014L31.7598 69.5635V69.5645C31.5689 69.8469 31.3065 70.0833 30.9941 70.248C30.6817 70.4128 30.3296 70.5 29.9707 70.5H21.0303L20.8965 70.4961C20.5842 70.4771 20.2804 70.3924 20.0068 70.248C19.6945 70.0833 19.433 69.8469 19.2422 69.5645L19.2412 69.5635L16.7656 65.9014L16.7646 65.9004L16.6846 65.7715C16.5349 65.5103 16.4465 65.2206 16.4238 64.9238L16.418 64.7754C16.416 63.1391 17.7417 61.8117 19.3779 61.8115ZM25.4277 2.5C38.2024 2.4613 48.5 12.6294 48.5 25.0938C48.4999 30.7772 46.3618 35.9634 42.8223 39.9375V39.9385C40.5419 42.499 37.1212 47.5084 35.3047 52.25H15.6953C13.8787 47.5082 10.4579 42.4988 8.17773 39.9385V39.9375C4.63818 35.9634 2.5001 30.7772 2.5 25.0938C2.5 13.1618 12.0712 2.53997 25.4277 2.5Z" stroke="black" stroke-width="5"/>
                 </svg>
@@ -157,10 +157,10 @@
     <footer>
         <!-- Footer sectie met navigatie naar 'over ons' pagina en 'contact'pagina -->
         <section class="platform-ad">
-            <h2>Platform Ad</h2>
+            <h2 class="font-size-heading-s">Platform Ad</h2>
             <ul>
-                <li><a href="">Over Ons</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a class="font-size-l">Over Ons</a></li>
+                <li><a class="font-size-l" href="contact.html">Contact</a></li>
             </ul>
         </section>
 
@@ -171,7 +171,7 @@
         </svg>
         
         <!-- Copyright -->
-        <p>&copy; 2018 - 2025 Platform Ad</p>
+        <p class="font-size-s">&copy; 2018 - 2025 Platform Ad</p>
 
     </footer>
     
