--- a/index.html
+++ b/index.html
@@ -152,6 +152,72 @@
             </p>
         </section>
 
+                <!-- Laatste-nieuws sectie op home-pagina -->
+        <section class="latest-news">
+            <h2 class="font-size-heading-s"><a href="#">Laatste nieuws</a></h2>
+            
+            <ul>
+                <!-- Eerste nieuws-item -->
+                <li>
+                    <article>
+                        <img src="assets/Paulo-Lopes-spreker-ad-dag1.jpg" alt="Foto Spreker Paulo Lopes op Ad dag" width="200">
+                        <h3 >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 640 640">
+                                <path d="M216 64C229.3 64 240 74.7 240 88L240 128L400 128L400 88C400 74.7 410.7 64 424 64C437.3 64 448 74.7 448 88L448 128L480 128C515.3 128 544 156.7 544 192L544 480C544 515.3 515.3 544 480 544L160 544C124.7 544 96 515.3 96 480L96 192C96 156.7 124.7 128 160 128L192 128L192 88C192 74.7 202.7 64 216 64zM480 496C488.8 496 496 488.8 496 480L496 416L408 416L408 496L480 496zM496 368L496 288L408 288L408 368L496 368zM360 368L360 288L280 288L280 368L360 368zM232 368L232 288L144 288L144 368L232 368zM144 416L144 480C144 488.8 151.2 496 160 496L232 496L232 416L144 416zM280 416L280 496L360 496L360 416L280 416zM216 176L160 176C151.2 176 144 183.2 144 192L144 240L496 240L496 192C496 183.2 488.8 176 480 176L216 176z"/>
+                            </svg>
+                            Save the date
+                        </h3>
+                        <p class="font-size-s">Landelijke Ad-dag 17 april 2026 <br> Locatie: Hanze - Groningen</p>
+                        <a class="MeerNieuws-ad" href="#">
+                            Lees meer
+                            <svg  width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.5858 6.34317L12 4.92896L19.0711 12L12 19.0711L10.5858 17.6569L16.2427 12L10.5858 6.34317Z" fill="currentColor"/>
+                            </svg>
+                        </a>
+                    </article>
+                </li>
+                <!-- Tweede nieuws-item -->
+                <li>
+                    <article>
+                        <img src="assets/Logo-Pionieren.png" alt="Logo spel pionieren" width="200">
+                        <h3>
+                            YESSSS!
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 640 640">
+                                <path d="M525.2 82.9C536.7 88 544 99.4 544 112L544 528C544 540.6 536.7 552 525.2 557.1C513.7 562.2 500.4 560.3 490.9 552L444.3 511.3C400.7 473.2 345.6 451 287.9 448.3L287.9 544C287.9 561.7 273.6 576 255.9 576L223.9 576C206.2 576 191.9 561.7 191.9 544L191.9 448C121.3 448 64 390.7 64 320C64 249.3 121.3 192 192 192L276.5 192C338.3 191.8 397.9 169.3 444.4 128.7L491 88C500.4 79.7 513.9 77.8 525.3 82.9zM288 384L288 384.2C358.3 386.9 425.8 412.7 480 457.6L480 182.3C425.8 227.2 358.3 253 288 255.7L288 384z"/>
+                            </svg>
+                            <br>Het spel Pionieren! is er!
+                        </h3>
+                        <p font-size-s>Ervaar het perspectief van pioniersstudenten en ontdek hoe jij écht verschil kunt maken</p>
+                        <a class="MeerNieuws-ad" href="#">
+                            Lees meer
+                            <svg  width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.5858 6.34317L12 4.92896L19.0711 12L12 19.0711L10.5858 17.6569L16.2427 12L10.5858 6.34317Z" fill="currentColor"/>
+                            </svg>
+                        </a>
+                    </article>
+                </li>
+                <!-- Derde nieuws-item -->
+                <li>
+                    <article>
+                        <img src="assets/impactmakerschap-handleiding-foto1.jpg" alt="Foto impactmakerschapshandleiding" width="200">
+                        <h3>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 640 640">
+                                <path d="M216 64C229.3 64 240 74.7 240 88L240 128L400 128L400 88C400 74.7 410.7 64 424 64C437.3 64 448 74.7 448 88L448 128L480 128C515.3 128 544 156.7 544 192L544 480C544 515.3 515.3 544 480 544L160 544C124.7 544 96 515.3 96 480L96 192C96 156.7 124.7 128 160 128L192 128L192 88C192 74.7 202.7 64 216 64zM480 496C488.8 496 496 488.8 496 480L496 416L408 416L408 496L480 496zM496 368L496 288L408 288L408 368L496 368zM360 368L360 288L280 288L280 368L360 368zM232 368L232 288L144 288L144 368L232 368zM144 416L144 480C144 488.8 151.2 496 160 496L232 496L232 416L144 416zM280 416L280 496L360 496L360 416L280 416zM216 176L160 176C151.2 176 144 183.2 144 192L144 240L496 240L496 192C496 183.2 488.8 176 480 176L216 176z"/>
+                            </svg>
+                            Save the date
+                        </h3>
+                        <p class="font-size-s">‘Making Waves’ - 23 juni 2025 <br> Locatie: het Instituut Associate degrees in Amersfoort</p>
+                        <a class="MeerNieuws-ad" href="#">
+                            Lees meer
+                            <svg  width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.5858 6.34317L12 4.92896L19.0711 12L12 19.0711L10.5858 17.6569L16.2427 12L10.5858 6.34317Z" fill="currentColor"/>
+                            </svg>
+                        </a>                    </article>
+                </li>
+            </ul>
+        </section>
+
+
     </main>
 
     <footer>
