Telefoonnummer input toegevoegd en email input value verwijderd #16

--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,13 @@
 
                 <label class="label-ad">
                     <span>E-mail</span>
-                    <input type="email" required value="name@example.com" class="" />
+                    <input type="email" required  class="" />
+                </label>
+
+                <label class="label-ad">
+                    Telefoonnummer
+                    <input type="tel" class="" />
+                    <small>(+31) 6 123456789</small>
                 </label>
 
                 <label class="label-ad">
