Search bar aangepast met behulp van Sanne in HTML en CSS close #9

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
                 </svg>
             </a>
             
-            <label aria-label="zoekbalk">
-				<input type="search" placeholder="Zoeken...">
-			</label>
+            <!-- <search> -->
+            <!-- <form action=""> -->
+
+                <label aria-label="zoekbalk">
+                    <input type="search" placeholder="Zoeken...">
+                </label>
+                <!-- <button type="submit">zoeken</button> -->
+            <!-- </form> -->
+            <!-- </search> -->
 
             <!-- Hamburger menu voor telefoons en tablets-->
             <button class="ham-menu-button">
