Top contact pagina aangepast HTML + CSS #8

--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,8 @@
 
     <main>
         
-        <section>
-            <h1>Contact</h1>
+        <section class="top-contact-page">
+            <h1>Neem contact op</h1>
         </section>
         
         <section class="contact-form">
