Navigatie op contact pagina aangemaakt in HTML en CSS #8

--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,14 @@
         <section class="top-contact-page">
             <h1>Neem contact op</h1>
         </section>
+
+        <nav class="nav-on-page">
+            <a href="#contact-form" class="font-size-m">Contact formulier</a>
+            <a href="#daily-management" class="font-size-m">Dagelijks bestuur</a>
+            <a href="#" class="font-size-m">Deelnemende hogescholen</a>
+        </nav>
+
+
         
         <section class="contact-form">
             
