Contact formulier id gegeven #8

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
 
 
         
-        <section class="contact-form">
+        <section class="contact-form" id="contact-form">
             
             <h2 class="font-size-heading-s">Contact formulier</h2>
 
