Begin 'Dagelijks bestuur' aangemaakt in HTML en CSS #8

--- a/contact.html
+++ b/contact.html
@@ -139,6 +139,10 @@
             </form>
 
         </section>
+
+        <section>
+            <h2 class="font-size-heading-s" id="daily-management">Dagelijks bestuur</h2>
+        </section>
         
 
     </main>
