Telefoonnummers aangepast en verplichte velden toegevoegd aan contact formulier HTML #8

--- a/contact.html
+++ b/contact.html
@@ -108,6 +108,8 @@
             <h2 class="font-size-heading-s">Contact formulier</h2>
 
             <form class="contact-form-inside">
+                <p>Velden aangegeven met een <span>*</span> arcering zijn verplicht</p>
+
                 <label class="label-ad">
                     Voornaam
                     <input type="text" class="" />
@@ -126,7 +128,7 @@
                 <label class="label-ad">
                     Telefoonnummer
                     <input type="tel" class="" />
-                    <small>(+31) 6 123456789</small>
+                    <small>(+31) 6 12345678</small>
                 </label>
 
                 <label class="label-ad">
