Knop 'Back-to-top' toegevoegd aan HTML en CSS close #23

--- a/contact.html
+++ b/contact.html
@@ -146,6 +146,13 @@
             <h2 class="font-size-heading-s" id="daily-management">Dagelijks bestuur</h2>
         </section>
         
+        <!-- Losse knop: Back to top -->
+        <a class="button-to-top" href="#">
+            <svg width="17" height="10" viewBox="0 0 17 10" xmlns="http://www.w3.org/2000/svg">
+                <title>Terug naar boven op pagina</title>
+                <path d="M14.8235 9.88235L16.4706 8.23531L8.23538 0L0 8.23531L1.64705 9.88235L8.23538 3.29409L14.8235 9.88235Z"/>
+            </svg>
+        </a>
 
     </main>
 
