Searchbar aangepast, naar gezamelijke styleguide overgezet en nieuwe class gegeven #9

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- <search> -->
             <!-- <form action=""> -->
 
-                <label aria-label="zoekbalk">
+                <label aria-label="searchbar-ad" class="searchbar-ad">
                     <input type="search" placeholder="Zoeken...">
                 </label>
                 <!-- <button type="submit">zoeken</button> -->
