Searchbar aangepast contact pagina #9

--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
                 </svg>
             </a>
             
-            <label aria-label="zoekbalk">
-				<input type="search" placeholder="Zoeken...">
-			</label>
+            <label aria-label="searchbar-ad" class="searchbar-ad">
+                <input type="search" placeholder="Zoeken...">
+            </label>
 
             <!-- Hamburger menu voor telefoons en tablets-->
             <button class="ham-menu-button">
